cmake_minimum_required(VERSION 3.25)
project(CarRanker-newChanges)
set(CMAKE_CXX_STANDARD 17)
find_package(SFML 2.6 COMPONENTS system window graphics audio REQUIRED)
add_executable(CarRanker-newChanges main.cpp cars.cpp cars.h weather.cpp weather.h OptionsButton.cpp OptionsButton.h main.cpp)
target_link_libraries(CarRanker-newChanges PRIVATE sfml-graphics sfml-audio sfml-system sfml-window)
